# Securing-the-Software-Supply-Chain

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  scanner.py
.github/workflows/: ci.yml
cache/: learned_patterns.json  learning_data.json  popular_packages.json
src/: config.py  config.yaml  main.py
src/dependency_parser/: maven_parser.py  npm_parser.py  pypi_parser.py
src/risk_scorer/: scorer.py
src/suspicious_package_detector/: detector.py
src/threat_analysis/: __init__.py  cli.py  guide.md  threat_processor.py  trainer.py
src/vulnerability_checker/: nvd_checker.py  osv_checker.py
test_files/: comprehensive_requirements.txt  package-lock.json  pom.xml
tests/: test_main.py  test_maven_parser.py  test_npm_parser.py  test_nvd_checker.py  test_pypi_parser.py  test_scorer.py  test_trainer.py
tests/fixtures/: package_lock_v1.json  package_lock_v2.json  pom_no_properties.xml  pom_unresolved_property.xml  pom_with_properties.xml  requirements_pinned.txt  requirements_unpinned.txt  vulnerable_package-lock.json  vulnerable_pom.xml  vulnerable_requirements.txt
