[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "dependency-security-scanner"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "requests==2.32.3",
    "pip-requirements-parser==32.0.0",
    "pyyaml==6.0.2",
    "thefuzz==0.22.1",
    "python-Levenshtein==0.25.1",
    "packaging==24.1",
    "aiohttp==3.9.5",
    "cvss==3.2",
    "defusedxml==0.7.1",
]

[project.scripts]
scanner = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
